--- a/lectures/lecture07/01-media-query/style.css
+++ b/lectures/lecture07/01-media-query/style.css
@@ -3,28 +3,38 @@
 }
 
 body {
-    margin: 0 auto;
-    max-width: 1000px;
+  margin: 0 auto;
+  max-width: 1000px;
 }
 
-header, main, footer {
-    border: solid 2px coral;
-    padding: 10px;
+header,
+main,
+footer {
+  border: solid 2px coral;
+  padding: 10px;
 }
 
 header {
-    height: 20vh;
+  height: 20vh;
 }
 
 main {
-    min-height: 70vh;
+  min-height: 70vh;
 }
 
 footer {
-    height: 10vh;
+  height: 10vh;
 }
 
 @media screen and (max-width: 800px) {
-    /* Your code here! */
+  header {
+    background-color: #444;
+    color: white;
+  }
+  main {
+    background-color: #ddd;
+  }
+  footer {
+    background-color: rgb(251, 174, 59);
+  }
 }
-
