--- a/lectures/lecture07/02-flexbox/styles.css
+++ b/lectures/lecture07/02-flexbox/styles.css
@@ -1,13 +1,27 @@
+/* I add this line to all of my CSS files by default */
+body * {
+  box-sizing: border-box;
+}
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 main {
-    height: 100vh;
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  row-gap: 20px;
 }
 
 section {
-    border: solid 4px orangered;
-    width: 200px;
-    height: 75px;
+  border: solid 4px orangered;
+  width: 200px;
+  min-height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
