--- a/lectures/lecture07/04-sticky-menu/styles.css
+++ b/lectures/lecture07/04-sticky-menu/styles.css
@@ -1,13 +1,13 @@
 body * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    background: #F4F4F4;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 1.2em;
-    line-height: 1.7em;
+  margin: 0;
+  background: #f4f4f4;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1.2em;
+  line-height: 1.7em;
 }
 
 /* Begin Debugging Code */
@@ -17,20 +17,28 @@ main,
 main section,
 nav,
 .logo {
-    border: solid 2px #CCC;
-    padding: 10px;
+  border: solid 2px #ccc;
+  padding: 10px;
 }
 
 aside,
-body>header,
+body > header,
 main {
-    border: solid 4px #000;
-    padding: 10px;
+  border: solid 4px #000;
+  padding: 10px;
 }
 
 /* End Debugging Code */
-
+header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  background-color: lavender;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 main {
-    padding: 0 15vw;
+  padding: 0 15vw;
 }
