--- a/tutorials/tutorial02/02-box-model/style.css
+++ b/tutorials/tutorial02/02-box-model/style.css
@@ -1,23 +1,45 @@
 body * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
 }
 
 /*
-Part 2: Put the main element (the card's parent container)
-into flex mode (display: flex) and adjust the 
-justify-content and align-items properties to center the card.
-*/
+  Part 2: Put the main element (the card's parent container)
+  into flex mode (display: flex) and adjust the 
+  justify-content and align-items properties to center the card.
+  */
 main {
-    min-height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*
-Part 1: Create some style blocks to style the card. 
-    Experiment with: border, padding, margin, height, and width.
-*/
+  Part 1: Create some style blocks to style the card. 
+      Experiment with: border, padding, margin, height, and width.
+  */
+
+.card {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(117, 188, 201);
+  width: 310px;
+  border: rgb(26, 104, 117) 5px solid;
+  justify-content: center;
+}
+
+.card h2,
+.card p {
+  padding: 5px;
+}
+
+.card button {
+  width: 50px;
+  margin-left: 5px;
+  margin-bottom: 5px;
+}
