--- a/tutorials/tutorial02/03-fonts/style.css
+++ b/tutorials/tutorial02/03-fonts/style.css
@@ -1,15 +1,20 @@
 /* Make sure that your @import statement is at the top of your CSS file  */
-
+@import url("https://fonts.googleapis.com/css2?family=Kablammo&display=swap");
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+h1,
+h2 {
+  font-family: "Kablammo", sans-serif;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 30px;
 }
