--- a/tutorials/tutorial02/04-flex/style.css
+++ b/tutorials/tutorial02/04-flex/style.css
@@ -1,14 +1,35 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
 /* create additional rules below:  */
+
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+#home {
+  background-color: #be6060;
+}
+#bio {
+  background-color: #a54141;
+}
+#portfolio {
+  background-color: #8d2727;
+}
+#contact {
+  background-color: #751919;
+}
