--- a/tutorials/tutorial02/05-navbar/style.css
+++ b/tutorials/tutorial02/05-navbar/style.css
@@ -1,12 +1,31 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  height: 200vh;
+}
+
+nav {
+  background-color: rgb(110, 196, 146);
+  position: fixed;
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+ul {
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style-type: none;
 }
