--- a/tutorials/tutorial02/07-tacotemple/style.css
+++ b/tutorials/tutorial02/07-tacotemple/style.css
@@ -1,3 +1,23 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(60, 111, 156);
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: rgb(144, 203, 255);
+}
+
+section {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  margin: 10px;
+  border: solid gray 2px;
+  padding: 15px;
+  background-color: white;
+}
+
+img {
+  width: 100%;
 }
