--- a/tutorials/tutorial01/style.css
+++ b/tutorials/tutorial01/style.css
@@ -1,30 +1,38 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
-
+a.button {
+  padding: 1px 6px;
+  border: 1px outset buttonborder;
+  border-radius: 3px;
+  color: buttontext;
+  background-color: buttonface;
+  text-decoration: none;
+}
 .navbar {
-    padding: 20px;
-    background-color: #F0F0F0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  padding: 20px;
+  background-color: #f0f0f0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.navbar a, .navbar strong {
-    margin-right: 15px;
+.navbar a,
+.navbar strong {
+  margin-right: 15px;
 }
 
 .photo-section {
-    display: flex;
-    width: 100%;
-    flex-direction: row;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
 }
 .photo-section img {
-    width: 32%;
-    margin-right: 1.3%;
+  width: 32%;
+  margin-right: 1.3%;
 }
 
 main {
-    padding-right: 10vw;
-    padding-left: 10vw;
+  padding-right: 10vw;
+  padding-left: 10vw;
 }
