--- a/homework/hw02/styles.css
+++ b/homework/hw02/styles.css
@@ -1,40 +1,70 @@
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.grid-container {
-  height: 100vh;
-  /* you will add addition rules for the container here  */
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: lightgray;
+  height: 90vh;
   display: grid;
-  grid-template: repeat(5, 1fr) / repeat(5, 1fr);
+  grid-template-columns: 1fr;
+  grid-template-rows: 10% 80%;
 }
 
-/* create your child rules here:  */
-div {
-  background-color: rgb(192, 167, 197);
-  border: solid rgb(105, 27, 124) 2px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+main {
+  background-color: rgb(179, 177, 177);
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 30px, auto;
+  height: 100ch;
+  width: 100%;
+  margin-top: 8ch;
 }
 
-.item-1 {
-  grid-area: 1/1/1/4;
+div,
+section {
+  border: 2px solid rgb(98, 98, 98);
 }
 
-.item-2 {
-  grid-area: 2/3/2/6;
+#navbar {
+  height: 100ch;
+  width: 100%;
+  position: fixed;
 }
 
-.item-3 {
-  grid-area: 3/1/3/4;
+#content {
 }
 
-.item-4 {
-  grid-area: 4/3/4/6;
+#suggested {
+  grid-template-columns: 80px auto 80px;
 }
 
-.item-5 {
-  grid-area: 5/1/5/4;
+#stories {
+  height: 15vh;
+}
+
+#post {
+}
+/* Mobile Version */
+@media (max-width: 768px) {
+  body {
+    height: auto;
+    grid-template-rows: auto;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    margin-top: 4ch;
+  }
+
+  #navbar {
+    height: auto;
+    position: static;
+  }
+
+  #suggested {
+    grid-template-columns: 1fr;
+  }
+
+  #stories {
+    height: auto;
+  }
 }
