--- a/homework/hw02/styles.css
+++ b/homework/hw02/styles.css
@@ -7,22 +7,23 @@ body {
 }
 
 main {
-  background-color: rgb(179, 177, 177);
+  background-color: lightgrey;
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 50vh, auto;
   width: 100%;
   height: 200vh;
+  padding-top: 13vh;
 }
 
 header {
-  background-color: lightgray;
+  background-color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: auto;
-  width: auto;
-  position: sticky;
+  height: 10vh;
+  width: 96%;
+  position: fixed;
   padding-left: 2%;
   padding-right: 2%;
 }
@@ -46,45 +47,153 @@ a:focus {
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Comfortaa", sans-serif;
+}
 #content {
-  border: black 1px solid;
+  /* border: black 1px solid; */
   padding-left: 10%;
+  height: fit-content;
 }
 
 #suggested {
   grid-template-columns: 80px auto 80px;
-  border: black 1px solid;
+  /* border: black 1px solid; */
   margin: 2%;
+  margin-top: 0.7%; /*wtf is thisss im so tired*/
+  height: 80vh;
+  width: 30vw;
+  position: fixed;
+  justify-self: end;
 }
 
 #stories {
-  height: 15vh;
-  border: black 1px solid;
+  height: fit-content;
+  /* border: black 1px solid; */
   display: flex;
   padding: 1%;
   margin: 1%;
   align-items: center;
+  background-color: white;
+}
+
+.pfp {
+  border-radius: 80px;
+  height: 80px;
+  width: 80px;
 }
 
 .story_post {
-  border: 1px solid darkcyan;
+  /* border: 1px solid darkcyan; */
   height: fit-content;
-  width: fit-content;
-
+  width: 90px;
   margin: 0.5%;
+  justify-items: center;
+}
+
+.story_post > p {
+  font-size: smaller;
+  color: rgb(95, 95, 95);
+
+  margin: 0;
+}
+
+.story_post > img {
+  border: 3px solid lightgray;
 }
 
 #posts {
-  border: 1px solid black;
   margin: 1%;
+  margin-top: 2%;
 }
 
 .post {
-  border: 1px black solid;
+  background-color: white;
+  height: fit-content;
+  /* border: 1px black solid; */
+  padding: 0%;
+  /* padding-bottom: 1%; */
+  margin-bottom: 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.post_header {
+  display: flex;
+  height: min-content;
+  width: 95%;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 1%;
+}
+
+.post > img {
+  width: 100%;
+  margin: 10px;
+}
+
+.post_description {
+  width: 95%;
+  padding: 2%;
+  padding-bottom: 0;
+}
+
+.post_description > strong {
+  padding-bottom: 1%;
+}
+
+.post_icons {
+  font-size: 25pt;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-between;
+  margin-bottom: 2%;
+}
+
+.post_icons > p {
+  margin: 0;
+  padding: 0;
+}
+
+.comments {
+  margin-top: 2%;
+}
+.comments > p {
+  font-size: small;
   margin: 1%;
 }
 
-/* Mobile Version */
+.comment_box {
+  height: fit-content;
+  width: 94%;
+  border-top: 1px rgb(112, 112, 112) solid;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-between;
+  margin: 1%;
+  padding-top: 1%;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+.comment_box > div {
+  display: flex;
+  flex-direction: row;
+  width: 27%;
+  justify-content: space-between;
+}
+
+/* mobile Version  */
 @media (max-width: 768px) {
   body {
     height: auto;
