--- a/homework/hw02/styles.css
+++ b/homework/hw02/styles.css
@@ -10,7 +10,7 @@ main {
   background-color: lightgrey;
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: 50vh, auto;
+  grid-template-rows: 50vh auto;
   width: 100%;
   height: 200vh;
   padding-top: 13vh;
@@ -62,14 +62,17 @@ h6 {
 }
 
 #suggested {
-  grid-template-columns: 80px auto 80px;
-  /* border: black 1px solid; */
+  display: flex;
+  flex-direction: column;
+  padding-left: 2%;
   margin: 2%;
-  margin-top: 0.7%; /*wtf is thisss im so tired*/
-  height: 80vh;
+  margin-top: -1.3%; /*wtf is thisss im so tired*/
+  height: 85vh;
   width: 30vw;
-  position: fixed;
-  justify-self: end;
+  position: relative;
+  right: 0.5%;
+  top: 2vh;
+  background-color: white;
 }
 
 #stories {
@@ -89,7 +92,6 @@ h6 {
 }
 
 .story_post {
-  /* border: 1px solid darkcyan; */
   height: fit-content;
   width: 90px;
   margin: 0.5%;
@@ -199,7 +201,9 @@ h6 {
     height: auto;
     grid-template-rows: auto;
   }
-
+  #suggested {
+    display: none;
+  }
   main {
     display: flex;
     flex-direction: column;
