--- a/tutorials/tutorial05/01-theme-switcher/styles.css
+++ b/tutorials/tutorial05/01-theme-switcher/styles.css
@@ -2,94 +2,93 @@
 
 document,
 body {
-    margin: 0px;
-    font-family: 'Montserrat';
+  margin: 0px;
+  font-family: "Montserrat";
 }
 
 body * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .container {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 header,
 nav {
-    display: flex;
-    justify-content: center;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  height: 100%;
 }
 
 header {
-    align-items: center;
-    color: #555;
-    border-bottom: solid 1px #CCC;
-    background-color: #F2F2F2;
-    height: 100px;
+  align-items: center;
+  color: #555;
+  border-bottom: solid 1px #ccc;
+  background-color: #f2f2f2;
+  height: 100px;
 }
 
 nav {
-    height: 50px;
-    border-bottom: solid 1px #CCC;
-    justify-content: flex-end;
-    padding-right: 20px;
+  height: 50px;
+  border-bottom: solid 1px #ccc;
+  justify-content: flex-end;
+  padding-right: 20px;
 }
 
 button {
-    background-color: transparent;
-    border: 0px;
-    text-decoration: none;
-    font-size: 1.1em;
-    color: #666;
-    margin-right: 15px;
+  background-color: transparent;
+  border: 0px;
+  text-decoration: none;
+  font-size: 1.1em;
+  color: #666;
+  margin-right: 15px;
 }
 
 #bigger {
-    font-size: 2em;
+  font-size: 2em;
 }
 
 #smaller {
-    font-size: 1em;
+  font-size: 1em;
 }
 
 .content {
-    padding: 40px;
-    font-size: 1.4em;
-    color: #666;
-    min-height: 100vh;
+  padding: 40px;
+  font-size: 1.4em;
+  color: #666;
+  min-height: 100vh;
 }
 
 h1 {
-    font-size: 2em;
+  font-size: 2em;
 }
-
 
 /***************/
 /* Ocean Theme */
 /***************/
 
 .ocean header {
-    background: #434a6c;
-    color: white;
-    font-family: 'Montserrat';
+  background: #434a6c;
+  color: white;
+  font-family: "Montserrat";
 }
 
 .ocean button,
 .ocean .content {
-    color: #434a6c;
+  color: #434a6c;
 }
 
 .ocean .content {
-    background: #99cccc;
-    line-height: 1.6em;
+  background: #99cccc;
+  line-height: 1.6em;
 }
 
 .ocean header,
 .ocean nav {
-    border-bottom: solid 1px #434a6c;
+  border-bottom: solid 1px #434a6c;
 }
 
 /****************/
@@ -97,49 +96,48 @@ h1 {
 /****************/
 
 .desert header {
-    background: #A8651E;
-    color: #EFDEC2;
+  background: #a8651e;
+  color: #efdec2;
 }
 
 .desert button {
-    color: #A8651E;
+  color: #a8651e;
 }
 
 .desert .content {
-    background: #EFDEC2;
-    color: #A8651E;
+  background: #efdec2;
+  color: #a8651e;
 }
 
 .desert header,
 .desert nav {
-    border-bottom: solid 1px #774713;
+  border-bottom: solid 1px #774713;
 }
-
 
 /***********************/
 /* High Contrast Theme */
 /***********************/
 
 .high-contrast header {
-    background: black;
-    color: white;
+  background: black;
+  color: white;
 }
 
 .high-contrast .content {
-    background: white;
-    color: black;
+  background: white;
+  color: black;
 }
 
 .high-contrast header,
 .high-contrast nav {
-    border-bottom: solid 1px black;
+  border-bottom: solid 1px black;
 }
 
 .high-contrast header {
-    background: black;
-    color: white;
+  background: black;
+  color: white;
 }
 
 .high-contrast button {
-    color: black;
+  color: black;
 }
