--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ body {
   margin: 0;
   padding: 50;
 }
+body.background-active {
+  background-image: url("images/frutigeraerowallpaper.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 iframe {
   margin: 15px;
 }
@@ -77,6 +82,21 @@ img {
   height: fit-content;
   border-radius: 8px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Button Styles */
+button {
+  font-size: 1.5em;
+  background-color: #efacda;
+  color: #fff;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 8px;
+  transition: background 0.3s;
+}
+
+button:hover {
+  background-color: #ff99cc;
 }
 
 /* Responsive Styles */
