--- a/tutorials/tutorial09/templates/quote-of-the-day.html
+++ b/tutorials/tutorial09/templates/quote-of-the-day.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-    <meta charset="UTF-8">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
     <title>Server-Side Template: Quote of the Day</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome, {{ user.get('first_name') }} {{ user.get('last_name') }}</h1>
-    <p>Output the quote and the author here. 
-        See <a href="https://www.w3schools.com/python/python_dictionaries_access.asp" target="_blank">W3Schools</a>
-        to learn how to access a dictionary value if you're new to Python.
+    <p>
+      <em>{{random_quote.get('quote')}}/em>
     </p>
-</body>
+    <p>By: {{random_quote.get('author')}}</p>
+  </body>
 </html>
