--- a/tutorials/tutorial09/templates/restaurant.html
+++ b/tutorials/tutorial09/templates/restaurant.html
@@ -19,10 +19,33 @@
     <main>
       <p>Search location: {{location}}</p>
       <p>Search term: {{search_term or 'None Specified'}}</p>
-      <p>Data: {{ restaurant }}</p>
+      <br />
+
       <h2>Top Restaurant:</h2>
-      <h3>Name: {{ restaurant.get('name') }}</h3>
-      <img src="{{restaurant.get('image_url')}}"</img>
+      <section class="card" style="border: solid 2px black; width: fit-content">
+        <!-- <h1>{{ restaurant.get('name') }}</h1> -->
+        <h1 style="padding: 5px">{{ restaurant.name }}</h1>
+
+        <img src="{{restaurant.image_url}}" style="width: 400px" />
+
+        <div style="margin: 10px">
+          <p style="font-size: larger">{{restaurant.display_address }}</p>
+          <table style="width: 150px">
+            <tr>
+              <td>Price:</td>
+              <td><b> {{restaurant.price}} </b></td>
+            </tr>
+            <tr>
+              <td>Rating:</td>
+              <td><b>{{restaurant.rating}}</b></td>
+            </tr>
+            <tr>
+              <td># Reviews:</td>
+              <td><b>{{restaurant.review_count}}</b></td>
+            </tr>
+          </table>
+        </div>
+      </section>
     </main>
   </body>
 </html>
